# harness-quality-gate

./: .gitignore  .progress.md  MUTANT_KILLING_GUIDE.md  MUTANT_KILLING_GUIDE_PHP.md  MUTANT_KILLING_GUIDE_SKILL.md  MUTATION_TESTING.md  Makefile  PERSISTENT_PROMPT_CONSTRAINTS.md  README.md  SKILL.md  SUBAGENT_MUTATION_INSTRUCTIONS.md  bandit.yaml  pyproject.toml  workflow.md
.github/workflows/: ci.yml
MUTANT_KILLING_GUIDE/: 0-reglas-de-oro-no-negociables.md  1-bucle-de-trabajo-por-superviviente.md  2-qu-muta-mutmut-para-saber-qu-buscar-en-el-diff.md  3-triage-clasifica-antes-de-actuar.md  4-catlogo-de-tcnicas-para-matar.md  5-taxonoma-de-presuntos-equivalentes-y-solucin-por-tipo.md  6-estrategia-de-campaa-para-el-coordinador.md  7-poltica-de-pragmas-ltimo-recurso.md  8-checklist-por-mutante-resumen-ejecutable.md  fuentes.md  h1-passthrough-de-argumentos-a-colaboradores-mockeados-el-n-1-de-este-repo.md  h10-estado-global-caches-y-singletons.md  h11-mutantes-que-requieren-inputs-imposibles-de-construir.md  h12-el-mutante-que-deberas-haber-matado-y-sigue-vivo-debugging-del-propio-test.md  h13-monkeypatchchdir-rompe-la-recoleccin-de-stats-de-mutmut.md  h14-la-trampa-del-xx-wrap-el-substring-ingenuo-no-mata-strings.md  h15-gemelos-falsy-en-inicializadores-none-falsenone-none.md  h16-exit-24-sigxcpu-en-runs-paralelos-casi-siempre-es-flake-no-timeout.md  h17-inputs-sobre-mockeados-que-se-vuelven-bombas-de-memoria-bajo-mutacion.md  h2-valores-no-deterministas-tiempo-duraciones-redondeos.md  h3-logging-con-placeholders.md  h4-tablas-de-verdad-incompletas-en-condiciones-compuestas.md  h5-el-orquestador-sobre-mockeado-mutantes-dentro-de-lo-mockeado-jams-mueren-ah.md  h6-manejo-de-errores-except-que-tragan-y-fallbacks.md  h7-listas-argv-y-orden-de-elementos.md  h8-breakcontinue-y-early-return-en-loops-puros-el-equivalente-clsico-que-no-lo-es.md  h9-mutantes-timeout-y-suspicious.md  index.md  protocolo-de-medicin-fiable-aprendido-a-base-de-nmeros-absurdos.md  tldr-rbol-de-decisin-si-solo-lees-una-cosa-lee-esto.md
config/: php-tool-taxonomy.json  php-tool-versions.json  quality-gate.yaml
harness_quality_gate/: __main__.py  allow_list_auditor.py  bootstrap.py  checkpoint.py  checkpoint_v2.py  cli.py  concurrency.py  config.py  configurator.py  detector.py  dispatcher.py  doctor.py  exit_codes.py  framework_sniffer.py  installer.py  messages_es.py  messages_fr.py  models.py  state.py
harness_quality_gate/adapters/: base.py
harness_quality_gate/adapters/php/: antipattern_tier_a_php.py  composer_audit_adapter.py  dead_code_adapter.py  dep_analyser_adapter.py  deptrac_adapter.py  ecs_adapter.py  infection_adapter.py  infection_scope_guard.py  pcov_adapter.py  pest_adapter.py  php_adapter.py  php_cs_fixer_adapter.py  phpmd_adapter.py  phpstan_adapter.py  phpunit_adapter.py  psalm_taint_adapter.py  rector_adapter.py  security_checker_adapter.py  visitor_runner_adapter.py  weak_test_php.py
harness_quality_gate/adapters/python/: __init__.py  antipattern_tier_a.py  bandit_adapter.py  deptry_adapter.py  mutmut_adapter.py  principles.py  pyright_adapter.py  pytest_adapter.py  (+5 more)
harness_quality_gate/bmad/: antipattern_judge.py  diversity_metric.py  llm_solid_judge.py  mutation_analyzer.py  weak_test_engine.py
plans/: auto-evaluation-design.md  convergence-plan.md  desacoplamiento-bmad-harness-module.md  informe-harness-quality-gate.md  opencode-agent-inherit-analysis.md  plan-restaurar-php-support-revisado.md  plan-restaurar-php-support.md  tenemos-una-spec-php-support-breezy-glacier.md
references/: antipattern_judge.md  llm_solid_judge.md  owasp-checklist.md  pentest-remediation-index.md  security-tools-guide-php.md  security-tools-guide-python.md  security-tools-guide.md  self-gate-mutmut-policy.md  semgrep-ha-rules.yaml  semgrep-js-rules.yaml  semgrep-python-rules.yaml  verdict-schema.json  verdict-schema.md
scripts/: antipattern_checker.py  antipattern_judge.py  configurator.py  diversity_metric.py  extract_survivors.py  llm_solid_judge.py  mutation_analyzer.py  parse_mutmut_results.py  principles_checker.py  security_scanner.py  solid_metrics.py  weak_test_detector.py
specs/: .current-spec
specs/.index/: index-state.json  index.md
specs/php-support/: .progress.md  .ralph-state.json  chat.md  decisions.md  design.md  mutmut-baseline-REAL.md  requirements.md  research.md  signals.jsonl  task_review.md  tasks.md
steps/: step-00-install.md  step-01-init.md  step-02-layer1-php.md  step-02-layer1.md  step-03-layer2-php.md  step-03-layer2.md  step-03a-layer3a-php.md  step-03a-layer3a.md  step-04-layer3b-php.md  step-04-layer3b.md  step-05-checkpoint.md  step-06-layer4.md
tests/: conftest.py  factories.py
tests/e2e/: test_config_v1_hard_error.py  test_doctor_missing_php.py  test_full_gate_php.py  test_full_gate_python.py  test_infra_incomplete.py  test_smoke_php.py  test_smoke_python.py
tests/integration/: test_audit_ignores.py  test_checkpoint_contract.py  test_checkpoint_schema.py  test_concurrency_race.py  test_full_l1_php.py  test_full_l3a_php.py  test_hybrid_dispatch.py
tests/unit/: test_allow_list_auditor.py  test_base_adapter.py  test_bootstrap.py  test_checkpoint.py  test_cli_exit_codes_3_4.py  test_cli_logger_strings.py  test_cli_mutants.py  test_cli_paths.py  test_cli_subcommands.py  test_concurrency.py  test_config.py  test_coverage_gaps.py  test_densa_41.py  test_detector.py  test_dispatcher.py  test_diversity_metric.py  test_doctor.py  test_final_23_kills.py  test_final_coverage.py  test_installer.py  test_main_entry_point.py  test_messages_es.py  test_mutant_killers.py  test_mutation_analyzer.py  test_mutation_analyzer_cli.py  test_package_dirs_direct.py  test_phase0_runtime_regressions.py  test_phpmd_adapter_only.py  test_phpunit_adapter_junit_parsing.py  test_python_adapter_h1_wiring.py  test_python_adapter_mutant_kills.py  test_python_adapter_mutant_kills_l4.py  test_python_adapter_paths.py  test_python_adapter_targets.py  test_python_adapters.py  test_remaining_coverage.py  test_spy_subprocess_44.py  test_v13_straggler_killers.py  test_weak_test_assertions.py
(+111 files in other folders)
